--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,13 +16,15 @@
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            <!-- {% include icon-github.html username=site.github_username %} -->
+            Github Username
           </li>
           {% endif %}
 
           {% if site.twitter_username %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            <!-- {% include icon-twitter.html username=site.twitter_username %} -->
+            Twitter Username
           </li>
           {% endif %}
         </ul>
