adding js and playing with fonts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,3 +38,17 @@
   </div>
 
 </footer>
+
+
+
+<!-- 
+==========================================================================
+JS
+========================================================================== -->
+  <!-- CORE -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <!-- PLUGINS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.min.js"></script>
+  <!-- CUSTOM -->
+    <script src="/js/custom.js"></script>
