--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,25 @@
-<header>
-  	<nav class="navbar navbar-inverse navbar-fixed-top">
-    	<div class="container-fluid">
-      		<div class="navbar-header">
-        		<a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
-      		</div>
-    	</div>
-  	</nav>
+<header class="navbar navbar-default navbar-fixed-top">
+	<div class="container-fluid">
+
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+		</div>
+
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">About</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
 </header>
