--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,13 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">About</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
+				{% for p in site.pages %}
+					{% if p.title %}
+						<li {% if p.url == page.url %}class="active"{% endif %} >
+							<a href="{{ p.url }}">{{ p.title }}</a>
+						</li>
+					{% endif %}
+				{% endfor %}
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
