--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,13 @@
   transition: $feature $time;
 }
 
+::selection {
+  background: #000; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #000; /* Gecko Browsers */
+}
+
 
 body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -18,22 +25,19 @@ body {
   // HEADER
   header.navbar {
     background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.3);
+    border-color: rgba(255, 255, 255, 0);
     @include transition();
-
     a {
       color: rgba(255, 255, 255, 0.7) !important;
       text-transform: uppercase;
       font-weight: 700;
       font-size: 0.9em;
       @include transition();
-
       &:hover,
       &.active  {
         color: rgba(255, 255, 255, 1) !important;
         @include transition();
       }
-
       &.navbar-brand {
         font-size:1.5em;
       }
@@ -42,17 +46,14 @@ body {
       background-color: #fff;
       border-color: rgba(34, 34, 34, 0.5);
       @include transition();
-
        a {
          color: #222 !important;
          @include transition();
-
          &:hover,
          &.active  {
            color: #F05F40 !important;
            @include transition();
          }
-
          &.navbar-brand {
            color: #F05F40 !important;
            font-size: 14px;
@@ -61,6 +62,23 @@ body {
     }
   } // END HEADER
 
+  // HERO AREA - HOME PAGE
+  .hero {
+    width:100%;
+    color:#fff;
+    position: relative;
+
+    .container {
+      height:100%;
+      h1 {
+        position: relative;
+        top: 30%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+      }
+    }
+  }// END HERO AREA - HOME PAGE
 }
 
 
