--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,5 +50,6 @@ JS
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <!-- PLUGINS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   <!-- CUSTOM -->
     <script src="/js/custom.js"></script>
