--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{ site.baseurl }}/"><i class="ion-ios-star"></i>{{ site.title }}</a>
+			<a class="navbar-brand" href="#body"><i class="ion-ios-star"></i>{{ site.title }}</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,7 +17,7 @@
 				{% for p in site.pages %}
 					{% if p.title %}
 						<li>
-							<a {% if p.url == page.url %}class="active"{% endif %} href="{{ p.url }}">{{ p.title }}</a>
+							<a {% if p.url == page.url %}class="active"{% endif %} href="#{{ p.title }}">{{ p.title }}</a>
 						</li>
 					{% endif %}
 				{% endfor %}
