add weights to pages. move fittext function

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body id="top">
 
     {% include header.html %}
-
+    {% include hero.html %}
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
