--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,8 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				{% for p in site.pages %}
+				{% assign pages = site.pages | sort:"weight"  %}
+				{% for p in pages %}
 					{% if p.title %}
 						<li>
 							<a {% if p.url == page.url %}class="active"{% endif %} href="#{{ p.title }}">{{ p.title }}</a>
