--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,41 +1,34 @@
-<footer class="site-footer">
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        {{ site.title }}
+        <a href="mailto:{{ site.email }}">{{ site.email }}</a>
 
-  <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+        {% if site.github_username %}
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
+         {% include icon-github.html username=site.github_username %}
 
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            <!-- {% include icon-github.html username=site.github_username %} -->
-            Github Username
-          </li>
-          {% endif %}
+        {% endif %}
 
-          {% if site.twitter_username %}
-          <li>
-            <!-- {% include icon-twitter.html username=site.twitter_username %} -->
-            Twitter Username
-          </li>
-          {% endif %}
-        </ul>
-      </div>
+        {% if site.twitter_username %}
 
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+         {% include icon-twitter.html username=site.twitter_username %}
+
+        {% endif %}
+
+
+
+        {{ site.description }}
       </div>
     </div>
-
   </div>
+
+
+
+
+
 
 </footer>
 
