added more downcase support and changed css file

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -101,27 +101,27 @@ body {
     min-height:500px;
     padding:50px 0;
 
-    &#About {
+    &#about {
       background: $PrimaryColor;
       color: $White;
     }
 
-    &#Blog {
+    &#blog {
       background: $White;
       color: $Black;
     }
 
-    &#Services {
+    &#services {
       background: $Black;
       color: $White;
     }
 
-    &#Portfolio {
+    &#portfolio {
       background: $Black;
       color: $White;
     }
 
-    &#Contact {
+    &#contact {
       background: $White;
       color: $Black;
     }
