--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 				{% for p in pages %}
 					{% if p.title %}
 						<li>
-							<a {% if p.url == page.url %}class="active"{% endif %} href="#{{ p.title }}">{{ p.title }}</a>
+							<a {% if p.url == page.url %}class="active"{% endif %} href="#{{ p.title | downcase }}">{{ p.title }}</a>
 						</li>
 					{% endif %}
 				{% endfor %}
