--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,5 +1,6 @@
-<div class="hero text-center">
-	<div class="container" data-0="opacity:1" data-300="opacity:0">
-		<h1 class="fittext text-uppercase">Lorem ipsum dolor sit ametio.</h1>
+<div class="hero text-center" data-0="background:rgba(34,34,34,0.3)" data-600="background:rgba(34,34,34,0.9)">
+	<div class="container" data-0="opacity:1" data-500="opacity:0">
+		<!--<h1 class="fittext text-uppercase">Lorem ipsum dolor sit ametio.</h1>-->
+		<div class="logo"></div>
 	</div>
 </div>
