--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#top"><i class="ion-ios-star"></i>{{ site.title }}</a>
+			<a class="navbar-brand" href="#top"><i class="ion-pound"></i>{{ site.title }}</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
