--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-default navbar-fixed-top">
+<header class="navbar navbar-default navbar-fixed-top" data-0="background:rgba(255,255,255,0)" data-100="background:rgba(255,255,255,1)">
 	<div class="container-fluid">
 
 		<div class="navbar-header">
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#top"><i class="ion-pound"></i>{{ site.title }}</a>
+			<a class="navbar-brand" href="#top" data-0="color:rgba(255,255,255,0.7);font-size:1.5em;" data-100="color:rgba(34,34,34,1);font-size:1em;"><i class="ion-pound"></i>{{ site.title }}</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,7 +18,7 @@
 				{% for p in pages %}
 					{% if p.title %}
 						<li>
-							<a {% if p.url == page.url %}class="active"{% endif %} href="#{{ p.title | downcase }}">{{ p.title }}</a>
+							<a {% if p.url == page.url %}class="active"{% endif %} href="#{{ p.title | downcase }}" data-0="color:rgba(255,255,255,0.7)" data-100="color:rgba(34,34,34,1)">{{ p.title }}</a>
 						</li>
 					{% endif %}
 				{% endfor %}
