--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
-<div class="hero text-center" data-0="background:rgba(34,34,34,0.3)" data-600="background:rgba(34,34,34,0.9)">
-	<div class="container" data-0="opacity:1" data-500="opacity:0">
-		<!--<h1 class="fittext text-uppercase">Lorem ipsum dolor sit ametio.</h1>-->
-		<div class="logo"></div>
+<div class="hero text-center" data-0="background:rgba(34,34,34,0.3)" data-600="background:rgba(34,34,34,0.95)">
+	<div class="container" data-0="opacity:1;top:0;" data-500="opacity:0;top:-400px;">
+		<div class="logo" data-bottom-top="transform:translate3d(0px, 0%, 0px)"
+             data-top-bottom="transform:translate3d(0px, -100%, 0px)"></div>
 	</div>
 </div>
