fix layout bugs, added skrollr menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   {% include head.html %}
 
   <body id="top">
+  <div id="skrollr-body">
 
     {% include header.html %}
     {% include hero.html %}
@@ -15,6 +16,7 @@
 
     {% include footer.html %}
 
+    </div>
   </body>
 
 </html>
