--- a/_includes/lp_about.html
+++ b/_includes/lp_about.html
@@ -1,3 +1,13 @@
 <div class="col-xs-12">
-    <p>about include</p>
+    <!--<ul class="social list-inline">-->
+        <!--<li><a href="#"><i class="ion-social-linkedin"></i></a></li>-->
+        <!--<li><a href="#"><i class="ion-social-octocat"></i></a></li>-->
+        <!--<li><a href="#"><i class="ion-social-codepen"></i></a></li>-->
+    <!--</ul>-->
+    <h2>UI Engineer by day... and night. </h2>
+    <p> <i class="ion-quote"></i>My name is <strong>Rich</strong> and I'm a passionate <strong>UI Engineer</strong> with several years of experience.
+    I started my career as a <strong>visual designer</strong> and migrated quickly into code and I love it.
+    Aside from <strong>UI</strong>, I also love diving into <strong>UX Architecture</strong> and <strong>branding</strong>. I typically
+    like to be involved from conception up to the final result.
+    I'm based out of <strong>Dallas, Texas</strong> and work freelance and full time.</p>
 </div>
