--- a/_includes/lp_contact.html
+++ b/_includes/lp_contact.html
@@ -1,3 +1,10 @@
 <div class="col-xs-12">
-    <p>contact include</p>
+        <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+        {% if site.github_username %}
+        {% include icon-github.html username=site.github_username %}
+        {% endif %}
+        {% if site.twitter_username %}
+        {% include icon-twitter.html username=site.twitter_username %}
+        {% endif %}
+        {{ site.description }}
 </div>
