change navbar brand link on internal pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body id="top" {% if page.slug %}class="post"{% endif %}">
+  <body id="top" {% if page.slug %}class="post"{% endif %}>
     {% include header.html %}
     <div id="skrollr-body">
       {% if page.url == "/" %}
