--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#top" data-0="color:rgba(255,255,255,0.7);font-size:1.5em;" data-100="color:rgba(34,34,34,1);font-size:1em;"><i class="ion-pound"></i>{{ site.title }}</a>
+			<a class="navbar-brand" href="{% if page.url == "/" %}#top{% else %}/{% endif %}" data-0="color:rgba(255,255,255,0.7);font-size:1.5em;" data-100="color:rgba(34,34,34,1);font-size:1em;"><i class="ion-pound"></i>{{ site.title }}</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
