add sticky footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body id="top" {% if page.slug %}class="post"{% endif %}>
+  <body id="top" {% if page.slug or page.title %}class="not-home"{% endif %}>
     {% include header.html %}
     <div id="skrollr-body">
       {% if page.url == "/" %}
@@ -12,7 +12,7 @@
           {{ content }}
         </div>
       </div>
-      {% include footer.html %}
     </div>
+    {% include footer.html %}
   </body>
 </html>
