--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,6 +14,13 @@ $Black: #222 !default;
 body, html, {
   height: 100%;
 }
+#skrollr-body {
+  min-height: 100%;
+  &:after {
+    content: "";
+    display: block;
+  }
+}
 
 h1,h2,h3,h4,h5,h6 {
   font-weight:700;
@@ -35,7 +42,7 @@ body {
   -webkit-background-size: cover;
   background-size: cover;
   
-  &.post {
+  &.not-home {
     background: $White;
 
     header.navbar {
@@ -148,7 +155,7 @@ body {
   }
 
   footer {
-    padding:50px 0;
+    padding:50px 0 20px;
     background: $White;
     color: $Black;
   }
