--- a/_includes/lp_blog.html
+++ b/_includes/lp_blog.html
@@ -1,12 +1,13 @@
-<div class="col-xs-12">
-    <ul class="post-list">
-        {% for post in site.posts %}
-        <li>
-            <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-            <h2>
-                <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-            </h2>
-        </li>
-        {% endfor %}
-    </ul>
+
+{% if site.posts.size > 0 %}
+<div class="list-group">
+    {% for post in site.posts limit: 10 %}
+    <a href="{{ post.url }}" class="list-group-item">
+        <h4 class="list-group-item-heading">{{ post.title }}<small> &ndash; <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></small></h4>
+    </a>
+    {% endfor %}
 </div>
+<a href="/blog/" class="pull-right">more <i class="fa fa-long-arrow-right"></i></a>
+{% else %}
+<p>No posts found.</p>
+{% endif %}
