--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,51 @@ layout: default
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-        <header class="post-header">
-          <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-          <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-        </header>
+        {% assign post = page %}
 
-        <div class="post-content" itemprop="articleBody">
-          {{ content }}
-        </div>
+        <article>
+            <div id="post-header">
+                <h1 id="post-title">{{ post.title }}</h1>
+                <h4 id="post-subtitle"><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></h4>
+            </div>
 
-      </article>
+            <div id="post-content">
+                {{ content }}
+
+                {% if post.category %}
+                {% for site_category in site.data.categories %}
+                {% if site_category.slug == post.category %}
+                {% assign category = site_category %}
+                {% endif %}
+                {% endfor %}
+                {% if category %}
+                {% capture category_content %} in <span class="label" style="background-color:{{ category.color }}"><a href="/blog/category/{{ category.slug }}/">{{ category.name }}</a></span>{% endcapture %}
+                {% endif %}
+                {% else %}
+                {% assign category_content = '' %}
+                {% endif %}
+
+                {% if post.tags.size > 0 %}
+                {% capture tags_content %} with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+                {% for post_tag in post.tags %}
+                {% for data_tag in site.data.tags %}
+                {% if data_tag.slug == post_tag %}
+                {% assign tag = data_tag %}
+                {% endif %}
+                {% endfor %}
+                {% if tag %}
+                {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+                {% assign tags_content = tags_content_temp %}
+                {% endif %}
+                {% endfor %}
+                {% else %}
+                {% assign tags_content = '' %}
+                {% endif %}
+
+                <p id="post-meta">Posted {{ category_content }}{{ tags_content }}</p>
+            </div>
+        </article>
     </div>
   </div>
 </div>
