fixed links/blog links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,48 +14,20 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				{% assign pages = site.pages | sort:"weight"  %}
-				{% for p in pages %}
-					{% if p.weight %}
-						<li>
-<a href="{% if page.url != "/" %}{% if p.url == "/blog/" or  p.title == "Portfolio" %}/{{ p.title | downcase }}{% elsif p.title == "Blog" and p.url != "/blog/" %}{% else %}/#{{ p.title | downcase }}{% endif %}{% else %}{% if p.title == "Blog" and p.url != "/blog/" %}{% else %}#{{ p.title | downcase }}{% endif %}{% endif %}
-							"
-                                data-0="color:rgba(255,255,255,0.7)"
-                                data-100="color:rgba(34,34,34,1)">
-                                {{ p.title }}
-                            </a>
-						</li>
-					{% endif %}
-				{% endfor %}
+                {% assign pages = site.data.pages %}
+                {% for p in pages %}
+                <li>
+                    {% if page.url != "/" %}
+                    <a href="{{ p.prefix }}{{ p.name }}" data-0="color:rgba(255,255,255,0.7)" data-100="color:rgba(34,34,34,1)">{{ p.name }}</a>
+                    {% else %}
+                    <a href="#{{ p.name }}" data-0="color:rgba(255,255,255,0.7)" data-100="color:rgba(34,34,34,1)">{{ p.name }}</a>
+                    {% endif %}
+                </li>
+                {% endfor %}
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
 </header>
-
-
-{% assign pages = site.pages | sort:"weight"  %}
-	{% for p in pages %}
-		{% if p.weight %}
-
-			{% if page.url != "/" %}
-				{% if p.url == "/blog/" or  p.title == "Portfolio" %}
-					/{{ p.title | downcase }}
-				{% elsif p.title == "Blog" and p.url != "/blog/" %}
-
-				{% else %}
-					/#{{ p.title | downcase }}
-				{% endif %}
-
-
-			{% else %}
-				{% if p.title == "Blog" and p.url != "/blog/" %}
-				{% else %}
-					{{ p.title | downcase }}
-				{% endif %}
-			{% endif %}
-
-		{% endif %}
-	{% endfor %}
 
 
 
