--- a/_layouts/blog_by_category.html
+++ b/_layouts/blog_by_category.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<header id="post-header">
+<div id="post-header">
     <h1 id="post-title">{{ page.category }}</h1>
     <h4 id="post-subtitle">Articles by category</h4>
-</header>
+</div>
 
 <div id="post-content">
     {% if site.categories[page.category] %}
