--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,7 @@
 {% if page.comments %}
 <div id="disqus_thread"></div>
 <script type="text/javascript">
+//    var disqus_developer = 1; // Comment out when the site is live
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'sollenne'; // required: replace example with your forum shortname
     // var disqus_developer = 1; // Comment out when the site is live
