removed other blogs. added my first.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,16 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="container post-wrapper">
   <div class="row">
     <div class="col-xs-12">
 
         {% assign post = page %}
 
         <article>
-            <div id="post-header">
-                <h1 id="post-title">{{ post.title }}</h1>
-                <h4 id="post-subtitle"><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></h4>
+            <div class="post-header">
+                <h1>{{ post.title }}</h1>
+                <h4><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></h4>
             </div>
 
             <div id="post-content">
@@ -45,6 +45,8 @@ layout: default
                 {% else %}
                 {% assign tags_content = '' %}
                 {% endif %}
+
+                <h4 class="text-center">- Rich</h4>
 
                 <p id="post-meta">Posted {{ category_content }}{{ tags_content }}</p>
             </div>
