--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -172,6 +172,22 @@ body {
     }
   }
 
+  .post-wrapper {
+    article {
+      margin-bottom:50px;
+      .post-header {
+        padding: 21px 0;
+        h1 {
+          background: $Black;
+          color: $White;
+          display: inline-block;
+          padding: 10px 15px;
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
 
 }
 
