added styles for post headers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,5 +27,6 @@ JS
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="/js/skrollr-menu.min.js"></script>
+    <script src="/js/slabtext.js"></script>
   <!-- CUSTOM -->
     <script src="/js/custom.js"></script>
