--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,10 @@ layout: default
 
         <article>
             <div class="post-header">
-                <h1>{{ post.title }}</h1>
-                <h4><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></h4>
+                <h1 class="post-title">{{ post.title }}...</h1>
+                <h1 class="post-title">{{ page.subtitle }}</h1>
+                <h4><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b
+                    %d, %Y' }}</time></h4>
             </div>
 
             <div id="post-content">
