--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,18 @@
 ---
 layout: default
 ---
+
+<!-- Html Elements for Search -->
+<div id="search-container">
+    <input type="text" id="search-input" placeholder="search...">
+    <ul id="results-container"></ul>
+</div>
+
+<!-- Script pointing to jekyll-search.js -->
+<script src="{{ site.baseurl }}/bower_components/simple-jekyll-search/dest/jekyll-search.js"
+        type="text/javascript"></script>
+
+
 <div class="container post-wrapper">
   <div class="row">
     <div class="col-xs-12">
