--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,5 +28,6 @@ JS
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="/js/skrollr-menu.min.js"></script>
     <script src="/js/slabtext.js"></script>
+<script src="/js/jquery.mmenu.all.min.js"></script>
   <!-- CUSTOM -->
     <script src="/js/custom.js"></script>
