--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,14 @@
-<header class="navbar navbar-default navbar-fixed-top" data-0="background:rgba(255,255,255,0)" data-100="background:rgba(255,255,255,1)">
+<header class="navbar navbar-default navbar-fixed-top fixed" data-0="background:rgba(255,255,255,0)"
+		data-100="background:rgba(255,255,255,1)">
 	<div class="container-fluid">
 
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			<a type="button" class="navbar-toggle collapsed"  href="#my-menu">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
-			</button>
+			</a>
 			<a class="navbar-brand" href="{% if page.url == "/" %}#top{% else %}/{% endif %}" data-0="color:rgba(255,255,255,0.7);font-size:1.5em;" data-100="color:rgba(34,34,34,1);font-size:1em;"><i class="ion-pound"></i>{{ site.title }}</a>
 		</div>
 
