--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body id="top" {% if page.active != "home" %}class="not-home"{% endif %}>
-    {% include header.html %}
-    <div id="skrollr-body">
-      {% if page.url == "/" %}
-        {% include hero.html %}
-      {% endif %}
-      <div class="page-content">
-        <div class="wrapper">
-          {{ content }}
+  <body id="top" class="{% if page.active != "home" %}not-home{% else %}home{% endif %}">
+  <div class="site-wrapper">
+      {% include off_canvas.html %}
+      {% include header.html %}
+      <div id="skrollr-body">
+          {% if page.url == "/" %}
+            {% include hero.html %}
+          {% endif %}
+          <div class="page-content">
+            <div class="wrapper">
+              {{ content }}
+            </div>
+          </div>
+          {% include footer.html %}
         </div>
+        {% include google_analytics.html %}
       </div>
-      {% include footer.html %}
-    </div>
-    {% include google_analytics.html %}
   </body>
 </html>
