--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,10 +37,13 @@ h1,h2,h3,h4,h5,h6 {
 
 body {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  padding-top: 50px;
   background: url("/img/138H.jpg") center center no-repeat fixed;
   -webkit-background-size: cover;
   background-size: cover;
+
+  &.home {
+    padding-top:50px;
+  }
   
   &.not-home {
     background: $White;
