--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 
 // Import Custom Fonts and Icons
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900);
 @import url(http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 
 // Import partials from `sass_dir` (defaults to `_sass`)
