--- a/_includes/lp_blog.html
+++ b/_includes/lp_blog.html
@@ -1,4 +1,3 @@
-
 {% if site.posts.size > 0 %}
 <div class="list-group row">
 
@@ -15,10 +14,16 @@
 
 
     {% for post in site.posts limit: 10 %}
-    <a href="{{ post.url }}" class="blog-post col-xs-12 col-sm-3">
-        <div class="well">
-            <h4 class="">{{ post.title }}<small> &ndash; <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></small></h4>
+
+    <a href="{{ post.url }}" class="blog-post col-xs-12 col-sm-6 col-md-4">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="{{ post.name }}">
+                    <h4 class="">{{ post.title }}<small> &ndash; <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: '%b. %d, %Y' }}</time></small></h4>
+                </div>
+            </div>
         </div>
+
     </a>
     {% endfor %}
 </div>
