cool blog post style on home 2

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,5 +30,6 @@ JS
     <script src="/js/slabtext.js"></script>
     <script src="/js/jquery.mmenu.all.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dynamics.js/0.0.7/dynamics.min.js"></script>
+    <script src="/js/jquery.duotone.min.js"></script>
   <!-- CUSTOM -->
     <script src="/js/custom.js"></script>
